Submit a message to a topic
