# rest-server.js
@@ -30,9 +30,15 @@ app.post('/api/v1/topic/', async (req, res) => {
     let topicId = await hcsService.createTopic();
     res.send({ topic: `${topicId}`});
 });
-
 app.get('/api/v1/topic/:topicId', async (req, res) => {
     let topicInfo = await hcsService.getTopicInfo(req.params.topicId);
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(topicInfo, null, 3));
+});
+
+app.post('/api/v1/submitMessage', async (req, res) => {
+    console.log(req.query.topicId);
+    console.log(req.query.message);
+    res.send({ message: await hcsService.submitMessage(req.query.topicId, req.query.message) });
+
 });
